--- a/app/Console/Commands/Core/stubs/theme.css
+++ b/app/Console/Commands/Core/stubs/theme.css
@@ -1,7 +1,7 @@
 :root {
-    --font-sans-serif: 'Inter', sans-serif;
+    --font-body: "Inter", sans-serif;
 
-    --color-white: #ffff;
+    --color-white: #fff;
     --color-gray-1: #f7f7f7;
     --color-gray-2: #e6e6e6;
     --color-gray-3: #cacaca;
@@ -30,7 +30,8 @@
     --color-border-low-emphasis: var(--color-gray-2);
 
     --color-backdrop: rgba(0, 0, 0, 0.5);
-    --color-overlay: rgba(255, 255, 255, 0.8);
+    --color-overlay: hsla(0, 0%, 100%, 0.8);
+
     --color-surface-1: var(--color-white);
     --color-surface-2: var(--color-gray-1);
     --color-surface-3: var(--color-white);
@@ -40,15 +41,18 @@
     --border-radius-circle: 100%;
 
     --top-bar-container: 64rem;
+    --top-bar-background-color: var(--color-surface-1)
 }
 
 .theme--dark {
+    --font-body: "Inter", sans-serif;
+
     --color-primary: #63a6f5;
     --color-success: #50e3c2;
     --color-warning: #f5a623;
     --color-danger: #d4667c;
 
-    --color-text-high-emphasis: var(--color-white);
+    --color-text-high-emphasis: #0F0;
     --color-text-medium-emphasis: var(--color-gray-3);
     --color-text-low-emphasis: var(--color-gray-5);
 
@@ -64,5 +68,5 @@
     --color-surface-1: var(--color-gray-7);
     --color-surface-2: var(--color-gray-6);
     --color-surface-3: var(--color-gray-6);
-    --color-overlay: rgba(0, 0, 0, 0.8);
+    --color-overlay: rgba(0,0,0,0.8);
 }
