--- a/app/Console/Commands/Core/stubs/theme.css
+++ b/app/Console/Commands/Core/stubs/theme.css
@@ -41,18 +41,17 @@
     --border-radius-circle: 100%;
 
     --top-bar-container: 64rem;
+    --top-bar-logo-height: 3.5rem;
     --top-bar-background-color: var(--color-surface-1)
 }
 
 .theme--dark {
-    --font-body: "Inter", sans-serif;
-
     --color-primary: #63a6f5;
     --color-success: #50e3c2;
     --color-warning: #f5a623;
     --color-danger: #d4667c;
 
-    --color-text-high-emphasis: #0F0;
+    --color-text-high-emphasis: var(--color-white);
     --color-text-medium-emphasis: var(--color-gray-3);
     --color-text-low-emphasis: var(--color-gray-5);
 
@@ -68,5 +67,5 @@
     --color-surface-1: var(--color-gray-7);
     --color-surface-2: var(--color-gray-6);
     --color-surface-3: var(--color-gray-6);
-    --color-overlay: rgba(0,0,0,0.8);
+    --color-overlay: rgba(0, 0, 0, 0.8);
 }
