--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -40,6 +40,8 @@
     --border-radius-circle: 100%;
 
     --top-bar-container: 64rem;
+    --top-bar-logo-height: 3.5rem;
+    --top-bar-background-color: var(--color-surface-1)
 }
 
 .theme--dark {
