--- a/app/Console/Commands/Core/stubs/theme.css
+++ b/app/Console/Commands/Core/stubs/theme.css
@@ -1,5 +1,5 @@
 :root {
-    --font-body: "Inter", sans-serif;
+    --font-body: 'Inter', sans-serif;
 
     --color-white: #fff;
     --color-gray-1: #f7f7f7;
@@ -30,8 +30,7 @@
     --color-border-low-emphasis: var(--color-gray-2);
 
     --color-backdrop: rgba(0, 0, 0, 0.5);
-    --color-overlay: hsla(0, 0%, 100%, 0.8);
-
+    --color-overlay: rgba(255, 255, 255, 0.8);
     --color-surface-1: var(--color-white);
     --color-surface-2: var(--color-gray-1);
     --color-surface-3: var(--color-white);
@@ -42,7 +41,10 @@
 
     --top-bar-container: 64rem;
     --top-bar-logo-height: 3.5rem;
-    --top-bar-background-color: var(--color-surface-1)
+    --top-bar-background-color: var(--color-surface-1);
+    --top-bar-text-color: var(--color-text-medium-emphasis);
+
+    --breadcrumbs-text-color: var(--color-text-medium-emphasis);
 }
 
 .theme--dark {
