--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,8 +5,6 @@
 @tailwind utilities;
 
 @import 'nprogress';
-
-//$balloon-bg: var(--color-surface-1);
 @import "~balloon-css/src/balloon";
 
 .bf-blur {
@@ -28,4 +26,37 @@
 
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.theme--dark {
+    .prose {
+        color: var(--text-medium-emphasis);
+    }
+
+    .vue-simplemde {
+        .editor-toolbar {
+            border-left: 1px solid var(--color-surface-3);
+            border-top: 1px solid var(--color-surface-3);
+            border-right: 1px solid var(--color-surface-3);
+
+            .separator {
+                border-left: 1px solid var(--color-surface-3);
+                border-right: transparent;
+            }
+
+            a {
+                color: var(--text-medium-emphasis) !important;
+            }
+
+            a:hover {
+                background: var(--color-surface-3);
+            }
+        }
+
+        .CodeMirror {
+            background: var(--color-surface-1);
+            color: var(--text-medium-emphasis);
+            border: 1px solid var(--color-surface-3);
+        }
+    }
 }
