--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1515,6 +1515,9 @@ select {
 .whitespace-nowrap {
   white-space: nowrap;
 }
+.break-words {
+  overflow-wrap: break-word;
+}
 .rounded {
   border-radius: 0.25rem;
 }
